first round of new unit tests fixed java 11 issue